# csv2json-easy

./: Cargo.toml  README.md
data/: data.csv
src/: main.rs
